# campaignManager

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md
backend/: .env  DockerFile  Dockerfile  abhishel.json  build_files.sh  data.json  db.sqlite3  entrypoint.sh  location.csv  pyproject.toml  requirements.txt  test.py  test_s3_storage.py  types.csv  types.numbers  vercel.json
backend/api/: admin.py  auth.py  models.py  profile.py  serializers.py  views.py
backend/api/migrations/: 0001_initial.py  0002_campaignimage_campaignlogo_keyword_targetdemographic_and_more.py  0003_usertype.py  0004_alter_campaign_file_userprofile.py  0005_campaign_user.py  0006_citydata_alter_campaign_user.py  0007_location.py  0008_rename_bidding_campaign_age_and_more.py  0009_remove_campaign_geo_campaign_location_and_more.py  0010_remove_keyword_keyword_keyword_file_and_more.py  0011_campaign_end_time_campaign_start_time.py  0012_proximity_proximity_store_weather_and_more.py  0013_remove_campaign_target_demographics_and_more.py  0014_alter_campaign_interset.py
backend/dsp/: settings.py  urls.py  wsgi.py
backend/stream/: app.py
backend/stream/.streamlit/: config.toml
backend/stream/pages/: user.py
backend/templates/dsp/: add_campaigns.html  index.html  login.html
dashboard/: app.py  login.py  register.py
dashboard/pages/: add_campaign.py  fetch_campaign_by_id.py  list_campaigns.py  user.py
frontend/: README.md  dockerfile
terraform/: main.tf  outputs.tf  terraform.tf  variables.tf
terraform/backend/: main.tf  output.tf
terraform/frontend/: main.tf
(+32 files in other folders)
